# DP-DataGeneration-MissingData

./: README.md  complete_evals.py  config.py  environment.yml  evaluation.py  impute.py  main.py  missing_mechanisms.py  opt_amp_cost.py  preprocess.py  requirements.txt  run_all.sh  utils.py
DPautoGAN/: __init__.py  dp_autoencoder.py  dp_autogan.py  dp_wgan.py
PrivBayes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  privbayes_new  run.sh
PrivBayes/code/: main_marginal.cpp  main_svm.cpp  methods.cpp  methods.h  table.cpp  table.h  tools.h
PrivBayesE_marginals/Adult/: adult_1_0.1.txt  adult_1_0.2.txt  adult_1_0.3.txt  adult_1_0.4.txt  adult_1_0.5.txt
PrivBayesE_marginals/Bank/: bank_1_0.1.txt  bank_1_0.2.txt  bank_1_0.3.txt  bank_1_0.4.txt  bank_1_0.5.txt
PrivBayesE_marginals/Br2000/: br2000_1_0.1.txt  br2000_1_0.2.txt  br2000_1_0.3.txt  br2000_1_0.4.txt  br2000_1_0.5.txt
PrivBayesE_marginals/National/: National_1_0.1.txt  National_1_0.2.txt  National_1_0.3.txt  National_1_0.4.txt  National_1_0.5.txt
aim/: aim.py
aim/mechanisms/: aim.py  mechanism.py
datasets/MAR/: adult_0.1.csv  adult_0.2.csv  adult_0.3.csv  adult_0.35.csv  adult_0.5.csv  adult_three_cols_0.2.csv  adult_three_full_0.2.csv  adult_three_full_0.5.csv  adult_three_full_0.8.csv  adult_two_cols_0.1.csv  adult_two_cols_0.2.csv  adult_two_cols_0.5.csv  bank_0.2.csv  bank_0.35.csv  br2000_0.2.csv  br2000_0.3.csv
kamino/: README.md  embedding_for_syn.pkl  run_all.sh  run_all_datasets.sh  run_some.sh  sftp-config.json
misgan/: __init__.py  analysis.py  misgan.py  wgan.py
(+153 files in other folders)
